--- a/transect_continuous.Rmd
+++ b/transect_continuous.Rmd
@@ -311,12 +311,9 @@ abcover_charateristics_leaftype <- abcover_charateristics %>%
   left_join(shrub_leaftype, by = "species")
 ```
 
-
 # Transect data
 ```{r data check, include = TRUE}
-abcover_charateristics_leaftype
-
-%>% 
+abcover_charateristics_leaftype %>% 
   group_by(site, transect) %>%
   summarize(data_points = length(unique(distance))) # number of "hits" per transect
 
@@ -324,20 +321,42 @@ abcover_full %>%
   group_by(site) %>%
   summarize(data_points = length(unique(transect))) # number of transects per site
 ```
-
+### omit ground
 ```{r omit ground as a status}
-abcover_full_1 <- abcover_full %>% 
-  left_join()
+abcover_omitground <- abcover_charateristics_leaftype %>% 
+  filter(vertical != "ground", 
+         vertical != "ground cover") %>% 
+  filter(species != "no_species")
 
-abcover_full_omitground <- abcover_full %>% 
-  left_join
-filter(abcover_full, status =="native" |status == "nonnative")
-print(abcover_full_v_omitground)
+#sort(unique(abcover_omitground$status))
 ```
+```{r linear reg}
+cover_bystatus <- abcover_omitground %>% 
+  group_by(site, transect, site_rep, year, status) %>% 
+  dplyr::summarize(
+    count_per_transect = n_distinct(site_rep_dist),
+    percentcover = n_distinct(site_rep_dist)/41 # <-- calculate percent cover by transect, lifeform, and status
+    )
+
+view(cover)
+
+# abcover_bylf_bystatus <- abcover_full_v_omitground %>% 
+#   group_by(standtype, lifeform, status, site, transect, site_rep, year) %>% 
+#   dplyr::summarize(
+#     count_per_transect = n_distinct(site_rep_dist), 
+#     percentcover = n_distinct(site_rep_dist)/41 # <-- calculate percent cover by transect, lifeform, and status
+#     ) %>% 
+#   ungroup() %>% 
+#   unite("lifeform_total", 2:3, sep = "_") #combines characters in two columns to one column
+# # view(abcover_bylf_bystatus) # prints to new tab
+# #write.csv(abcover_bylf_bystatus,"processed/abcover_bylf_bystatus.csv")
+# # visualizing data
+
+```
+
+```{r prep rbind leaftype, include=TRUE}
  
-```{r preprbindleaftype, include=TRUE}
- 
-shrubs <- abcover_full_v_omitground %>% 
+#shrubs <- abcover_full_v_omitground %>% 
 #   filter(lifeform == "shrub") %>% 
 #   left_join(shrub_leaftype, by = "species") %>% 
 #   dplyr::select(!c(lifeform)) %>% 
