--- a/twinspan.Rmd
+++ b/twinspan.Rmd
@@ -1,37 +1,60 @@
 ---
-title: "TWINSPAN"
-author: "Stephanie Ma Lucero"
-date: '2024-05-30'
-output: pdf_document
+title: "Untitled"
+author: "Kit Swift"
+date: "2024-06-13"
+output: html_document
 ---
-
-```{r}
-# R code for TWINSPAN - background, to understand, and to understand limitations
-# https://github.com/jarioksa/twinspan
-
-```
-
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+```{r}
+# devtools::install_github("jarioksa/twinspan") # if not installed yet
+# https://cran.r-project.org/bin/windows/Rtools/rtools42/rtools.html # You may need rtools updated
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+library(twinspan)
+library(vegan) # for data 
 ```
 
-## Including Plots
+```{r Twinspan proper}
+#twinspan
 
-You can also embed plots, for example:
+data(dune) #from vegan, other options include: varespec, mite, sipoo
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+tw <- twinspan(x = varespec #,
+               #cutlevels = c(0, 2, 5, 10, 20), #these are the default cut levels
+               #indmax = 7, #the maximum number of indidcators for each division (<= 15)
+               #groupmax = 5, #the minimum group size for division (>= 2)
+               #levmax = 6, #maximum levels of depth (<= 15), how many times itll divide
+               #lind, #whether or not you want certain psuedospecies levels to be considered in the indidcator analysis
+               #lwgt, #weights for species levels
+               #noind #any species you do NOT want to be indicators for some reason
+               )
+
+summary(tw) #this gets us the eigenvalues of each correspondance analysis, and the indidcator pseudospecies
+
+plot(as.dendrogram(tw, "species"), type = "triangle") #creates a dendogram based on species 
+plot(as.dendrogram(tw, "quadrat"), type = "triangle") #creates a dendogram based on the sample
+
+plot(as.hclust(tw, "species")) #creates a Hierarchical Cluster Tree based on the species
+plot(as.hclust(tw, "quadrat")) #creates a Hierarchical Cluster Tree based on the sample
+
+twintable(tw) #the table of relatedness, 00 is closer to 01 than it is to 11 and vice versa 
+image(tw) #a heatmap of the groups
+
+# almost all of these represent the same data, so its likely youll only need the dendograms and hclusters 
+
+# cut(tw) #returns vector of twinspan classes at a given level of hierarchy or classes respecting group heterogeneity for quadrats or species. 
+# eigenvals(tw) #returns the eigenvalues of twinspan divisions. I do not know what the eigenvalues tell us
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+```{r}
+# This is the error checking thing I mentioned
+# From documentation: twinspan bases its quadrat classification primarily on ordination axis. In some cases this is in conflict with the classification derived from indicator pseudospecies. This function identifies these cases. 
+# Twinspan is not an indicator species analysis, it is a dichotomized ordination analysis that also does a basic indicator species analysis
+# It takes into account the indicator species analysis when it builds its groups, but it can build the groups differently than what the indicator species may imply
+# this function finds those differences. If there are a lot, it may be worth it to look into modern "indicator species analysis" (IDA), if there are few to none, you dont have to worry about it :)
+misclassified(tw) 
+# (the dune and sipoo datasets give me no misclassifications, so its likely itll be fine)
+```
